     German, Italian, Japanese, Polish, Russian, Serbian, Slovak, Spanish,
     Turkish
   * the new widget library supports disabling of rows in a listbox, this is
     used to deactivate not available languages. This feature is experimental
     and only available when started with --new-widgets (bug #11212)
   * fonts: DejaVuSans 2.25
 * multiplayer:
   * revised maps: Den of Onis
 * Python AI:
   * Implemented a function which detects if a location is on the map border.
   * Implemented a function which gives the game's gold parameters.
 * terrains:
   * Fixed city village not being alias of the village terrain type; this was
     causing a duplicate "Village" terrain being displayed in the defense ratios
     section of unit descriptions in game help
   * Reorganisation of the terrain macros including more consistent image
     naming. The old macros are kept for now for compatibility.
   * New terrain: cave path
   * Fixed a ToD coloring bug preventing to use red channel below 8 (on 255)
   * Fixed some bugs with location-specific terrain-graphic rules
 * units:
   * balancing changes:
     * decreased the ranged attack of the Mage of Light from 15-3 to 12-3
     * decreased the melee attack of the Merman Warrior from 8-4 to 10-3
 * user interface:
   * Add a hotkey "Custom Command" and a command ":custom <command>" to assign
     a command to this hotkey. Also accept sequence of commands ("this; that").
   * Add a command "alias <name>=<command>". Also accept incomplete command and
     pass parameters (ex: "alias hp=unit hitpoints", then use "hp 100")
 * WML engine:
   * titlescreen is now randomly loaded
   * removeitem now can take an image key so that overlays can be removed one at
     a time. (patch #1067)
   * fix [teleport] capturing villages with the wrong side (bug #11683)
   * SideWML recruit= no longer locks the faction except if explicitely wanted
     with the new key faction_from_recruit=yes