@@ -30,6 +30,7 @@ Version 1.5.0+svn:
    * fonts: DejaVuSans 2.25
  * multiplayer:
    * revised maps: Den of Onis
+   * raised default per-Turn MP timer bonus to 60 seconds
  * Python AI:
    * Implemented a function which detects if a location is on the map border.
    * Implemented a function which gives the game's gold parameters.
